# semi-secret

./: .aider.chat.history.md  .aider.input.history  .gitignore  README.md  pyproject.toml  setup.py
.aider.tags.cache.v3/: cache.db
.github/workflows/: lint.yml  test_macos.yml  test_ubuntu.yml  test_win.yml
src/semi_secret/: __init__.py  cli.py  crypto.py  storage.py
tests/: test_cli.py  test_storage.py  test_usage.py
