[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semi_secret"
readme = "README.md"
description = "Semi Secret Key-value storage"
requires-python = ">=3.7"
keywords = ["template-python-cmd"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
version = "1.0.1"
dependencies = [
    "cryptography>=3.4.7",
    "appdirs>=1.4.4",
]
[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "tox",
    "ruff",
    "pytest-xdist",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[project.scripts]
semi-secret = "semi_secret.cli:main"
